# etf

./: filtered_etf_data2024-03-18.csv  filtered_etf_data2024-03-19.csv  filtered_etf_data2024-03-20.csv  filtered_etf_data2024-03-21.csv  filtered_etf_data2024-03-22.csv  final_portfolio.csv  final_portfolio_2024-03-15.csv  final_portfolio_2024-03-16.csv  final_portfolio_2024-03-17.csv  final_portfolio_2024-03-18.csv  final_portfolio_2024-03-19.csv  final_portfolio_2024-03-20.csv  final_portfolio_2024-03-21.csv  final_portfolio_2024-03-22.csv  main.py  myfile.txt  prompt  pyproject.toml  ranked_data_2024-03-08.csv  ranked_data_2024-03-09.csv  ranked_data_2024-03-10.csv  ranked_data_2024-03-11.csv  ranked_data_2024-03-12.csv  ranked_data_2024-03-13.csv  ranked_etf_data2024-03-14.csv  ranked_etf_data2024-03-15.csv  ranked_etf_data2024-03-16.csv  ranked_etf_data2024-03-17.csv  ranked_etf_data2024-03-18.csv  readme.md  replit.nix  selected_etfs_2024-03-15.csv  temp.py
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
