[tool.poetry]
name = "repl-nix-etf-new"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_etf_new"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
requests = "^2.31.0"
ta = "^0.11.0"
yfinance = "^0.2.37"
beautifulsoup4 = "^4.12.3"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
nltk = "^3.8.1"
newspaper3k = "^0.2.8"
goose3 = "^3.1.19"
zenrows = "^1.3.2"
selenium = "^4.18.1"
etf-scraper = "0.0.0"
pyetfdb-scraper = "0.2"
pydantic = "2.6.4"
tabulate = "0.9.0"
lxml = "^5.1.0"
certifi = "2024.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
